<resources>
    <string name="app_name">Bitcoin Wallet Tracker</string>
    <string name="touch_to_start">Touch to Start</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="balance">Balance</string>
    <string name="add_wallet">Add wallet</string>
    <string name="bitcoin_logo">Bitcoin Logo</string>
    <string name="see_on_blockstream">See on Blockstream</string>
    <string name="address">Address</string>
    <string name="btc_balance">BTC Balance</string>
    <string name="usd_balance">USD Balance</string>
    <string name="eur_balance">EUR Balance</string>
    <string name="confirmed_tx_count">Confirmed Tx Count</string>
    <string name="insert_a_bitcoin_address">Insert a bitcoin address</string>
    <string name="sure_to_add_address">Are you sure you want to add address</string>
    <string name="yes_add_it">yes, let\'s add it</string>
    <string name="no_maybe_later">no, maybe later</string>
    <string name="hide_values">Hide values</string>
    <string name="saved_currency_key">currency</string>
    <string name="fiat_balance">Fiat Balance</string>
    <string name="address_copied_on_clipboard">Address copied on clipboard</string>
    <string name="wallet">Wallet</string>
    <string name="loading_btc_balance">Loading BTC Balance …</string>
    <string name="loading_fiat_balance">Loading Fiat Balance …</string>
    <string name="this_address_is_already_on_your_list">This address is already on your list</string>
    <string name="address_should_have_one_satoshi">The bitcoin address should have at least 1 satoshi</string>
    <string name="add_a_wallet">Add a wallet</string>
    <string name="btc"> BTC</string>
    <string name="usd">usd</string>
    <string name="eur">eur</string>
    <string name="content_description">Content</string>
    <string name="search">Search</string>
    <string name="content_description_more">content description more</string>
    <string name="more">more</string>
</resources>